# kaggle-project-template

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
notebooks/: notebook.ipynb
scripts/: new-project.sh
templates/agent/: .env.example  ARCHITECTURE.md  requirements-dev.txt  requirements.txt
templates/agent/.github/workflows/: ci.yml
templates/agent/notebooks/: exploration.ipynb
templates/agent/src/agent/: loop.py  tools.py
templates/agent/src/agent/prompts/: CHANGELOG.md  system_v1.md
templates/agent/src/llm/: client.py  cost_tracker.py
templates/agent/tests/: test_cost_tracker.py  test_llm_client.py
tests/: test_placeholder.py
