[project]
name = "kaggle-project"
version = "0.1.0"
description = "Kaggle competition project"
requires-python = ">=3.12"
license = "MIT"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Notebooks: imports in one cell are used in later cells — ruff can't see this (ADR-026)
"notebooks/*.ipynb" = [
    "E402", # module-level import not at top of file
    "F401", # imported but unused (cross-cell usage)
    "F811", # redefinition of unused name
    "F821", # undefined name (cross-cell reference)
    "E501", # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
